--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,8 +8,10 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     env:
       working-directory: ./prova
 
@@ -19,11 +21,23 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v3.0.0
       
-    - name: run qmake
+    - name: run qmake on ubuntu
+      if: matrix.os == 'ubuntu-latest'
       run: |
         cd prova
         qmake -o Makefile prova.pro
         cat Makefile
         make
         ls
+        
+    - name: run qmake on windows
+      if: matrix.os == 'windows-latest'
+      run: |
+        cd prova
+        qmake -o Makefile prova.pro
+        cat Makefile
+        make
+        ls
+
+        
 
