--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -34,8 +34,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         cd prova
-        qmake -o Makefile prova.pro
-        make
+        "{{$RUNNER_WORKSPACE}}\Qt\Qt5.15.2\5.15.2\msvc2017_64\bin\qmake.exe" prova.pro -spec win32-msvc "CONFIG+=debug" "CONFIG+=qml_debug"
         ls
 
         
