--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,12 +26,14 @@ jobs:
       run: |
         cd prova
         qmake -o Makefile prova.pro
-        cat Makefile
         make
         ls
         
     - name: run qmake on windows
       if: matrix.os == 'windows-latest'
+    - name: Enable Developer Command Prompt
+      uses: ilammy/msvc-dev-cmd@v1.12.1
+    - name: build which needs cl.exe
       run: |
         cd prova
         "{{$RUNNER_WORKSPACE}}\Qt\Qt5.15.2\5.15.2\win64_msvc2019_64\bin\qmake.exe" prova.pro -spec win32-msvc "CONFIG+=debug" "CONFIG+=qml_debug"
