--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -32,7 +32,7 @@ jobs:
     - name: run qmake on windows
       if: matrix.os == 'windows-latest'
     - name: Enable Developer Command Prompt
-      uses: ilammy/msvc-dev-cmd@v1.12.1
+    - uses: ilammy/msvc-dev-cmd@v1.12.1
     - name: build which needs cl.exe
       run: |
         cd prova
