--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
       uses: jurplel/install-qt-action@v3.0.0
       
     - name: Enable Developer Command Prompt
-    - uses: ilammy/msvc-dev-cmd@v1.12.1
+      uses: ilammy/msvc-dev-cmd@v1.12.1
     - name: build which needs cl.exe
       run: |
         cd prova
