--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,9 +44,9 @@ jobs:
       with:
         name: bundles
         path: |
-          /prova/libprova.so
-          /prova/prova.o
-          /prova/prova.h
+          prova/libprova.so
+          prova/prova.o
+          prova/prova.h
         
         
 
